[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/DragPeca.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1272, 31.4361 )

[node name="DragPeca" type="Node2D" groups=[
"Peca",
]]
position = Vector2( 0, -63 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, 63 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/Area2D"]
shape = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 0, 126 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Area2D"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Sprite/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Sprite2/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Sprite3/Area2D" to="." method="_on_Area2D_input_event"]
